# epiphany

./: .ansible-lint  .dockerignore  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .pylintrc  .rubocop.yml  CHANGELOG-0.1.0.md  CHANGELOG-0.1.1.md  CHANGELOG-0.1.2.md  CHANGELOG-0.10.md  CHANGELOG-0.11.md  CHANGELOG-0.2.0.md  CHANGELOG-0.2.md  CHANGELOG-0.3.md  CHANGELOG-0.4.md  CHANGELOG-0.5.md  CHANGELOG-0.6.md  CHANGELOG-0.7.md  CHANGELOG-0.8.md  CHANGELOG-0.9.md  CHANGELOG-1.0.md  CHANGELOG-1.1.md  CHANGELOG-1.2.md  CHANGELOG-1.3.md  CHANGELOG.md  CLA.md  Dockerfile  LICENSE  LICENSES.md  README.md  VERSION  conftest.py  epicli  pytest.ini  setup.py  terraform.tfstate
.devcontainer/: Dockerfile  devcontainer.json  gen-dependency-info.py  gen-requirements.sh  pyproject.toml  python.env  requirements.md  requirements.txt
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feature-request.md  release-version.md  spike.md
ansible/: ansible.cfg.j2  inventory.j2
ansible/playbooks/: applications.yml  backup_kubernetes.yml  backup_load_balancer.yml  backup_logging.yml  backup_monitoring.yml  backup_postgresql.yml  backup_rabbitmq.yml  blackbox_exporter.yml  common.yml  download.yml  filebeat.yml  firewall.yml  haproxy.yml  haproxy_exporter.yml  helm.yml  jmx_exporter.yml  kafka.yml  kafka_exporter.yml  keycloak.yml  kibana.yml  kubernetes_master.yml  kubernetes_node.yml  node_exporter.yml  (+16 more)
ci/: linters.yaml  pipeline.yaml
cli/: epicli  epicli.py  licenses.py  version.py
core/: README.md  ansible.cfg  epiphany  epiphany-simple-config.yaml  manifest.yaml  proxy.sh  version.sh
core/src/epicli/.devcontainer/: Dockerfile  Pipfile  devcontainer.json  gen-dependency-info.py  gen-lock.sh  gen-requirements.sh  pyproject.toml  requirements.md  requirements.txt
core/src/epicli/.devcontainer/cert/: cert.md  config-post.sh  config-pre.sh  config.sh
docs/: README.md  project_layout.md
examples/: README.md
zap_scan/: Dockerfile
(+3175 files in other folders)
