[tool.poetry]
name = "epiphany-devcon"
version = "0.10.0"
description = "Epiphany Dev Container"
authors = ["Epiphany Platform"]

[tool.poetry.dependencies]
python = "3.10.6"
pyyaml = "*"
jinja2 = "*"
boto3 = "*"
jsonschema = "*"
python-json-logger = "*"
"ruamel.yaml" = "*"
azure-cli = "2.32.0"
click = "*"
ansible = "6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
