[tool.poetry]
name = "epiphany-devcon"
version = "0.10.0"
description = "Epiphany Dev Container"
authors = ["Epiphany Platform"]

[tool.poetry.dependencies]
python = "3.10.12"
pyyaml = "*"
jinja2 = "*"
boto3 = "*"
jsonschema = "*"
python-json-logger = "*"
"ruamel.yaml" = "*"
click = "*"
ansible = "7.0.0"
azure-cli = "2.51.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
